--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: lkavalia <lkavalia@student.42wolfsburg.    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/12 10:56:36 by lkavalia          #+#    #+#              #
-#    Updated: 2023/06/12 18:02:37 by lkavalia         ###   ########.fr        #
+#    Updated: 2023/06/13 11:41:41 by lkavalia         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = btc
 
 CC = c++
 
-CPP_FLAGS = -Wall -Werror -Wextra -std=c++98 -fsanitize=address
+CPP_FLAGS = -Wall -Werror -Wextra -std=c++98
 
 SRC = main.cpp BitcoinExchange.cpp
 
